tests/ui-nightly/include_value_not_from_bytes.stderr
error[E0277]: the trait bound `NotZerocopy<u32>: FromBytes` is not satisfied
  --> tests/ui-nightly/include_value_not_from_bytes.rs:13:42
   |
13 | const NOT_FROM_BYTES: NotZerocopy<u32> = include_value!("../../testdata/include_value/data");
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                          |
   |                                          the trait `FromBytes` is not implemented for `NotZerocopy<u32>`
   |                                          required by a bound introduced by this call
   |
   = help: the following other types implement trait `FromBytes`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and $N others
note: required by a bound in `AssertIsFromBytes`
  --> tests/ui-nightly/include_value_not_from_bytes.rs:13:42
   |
13 | const NOT_FROM_BYTES: NotZerocopy<u32> = include_value!("../../testdata/include_value/data");
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsFromBytes`
   = note: this error originates in the macro `$crate::transmute` which comes from the expansion of the macro `include_value` (in Nightly builds, run with -Z macro-backtrace for more info)
